src/test/ui/existential_types/different_defining_uses.stderr
error: concrete type differs from previous defining existential type use
  --> $DIR/different_defining_uses.rs:12:1
   |
LL | / fn bar() -> Foo {
LL | |     42i32
LL | | }
   | |_^ expected `&'static str`, got `i32`
   |
note: previous use here
  --> $DIR/different_defining_uses.rs:8:1
   |
LL | / fn foo() -> Foo {
LL | |     ""
LL | | }
   | |_^

error: aborting due to previous error

